# pordata

./: ARCHITECTURE.md  BEDIENUNGSANLEITUNG.txt  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  implementation_plan.md  index.html  package.json  tasks.md
.claude/skills/ship/: SKILL.md
.github/workflows/: release.yml
scripts/: deploy.sh  package-linux.sh  set-version.sh
src/: App.css  App.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  device_monitor.rs  lib.rs  sync_engine.rs
src/components/: ConflictDialog.tsx  Dashboard.tsx  NewJobDialog.tsx  SettingsDialog.tsx  SyncPreview.tsx
src/hooks/: useAppState.ts
